; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_test_chunk_content_length_overflow_error.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_test_chunk_content_length_overflow_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.test_chunk_content_length_overflow_error.a = private unnamed_addr constant [68 x i8] c"HTTP/1.1 200 OK\0D\0ATransfer-Encoding: chunked\0D\0A\0D\0AFFFFFFFFFFFFFFE\0D\0A...\00", align 16
@__const.test_chunk_content_length_overflow_error.b = private unnamed_addr constant [69 x i8] c"HTTP/1.1 200 OK\0D\0ATransfer-Encoding: chunked\0D\0A\0D\0AFFFFFFFFFFFFFFFF\0D\0A...\00", align 16
@__const.test_chunk_content_length_overflow_error.c = private unnamed_addr constant [70 x i8] c"HTTP/1.1 200 OK\0D\0ATransfer-Encoding: chunked\0D\0A\0D\0A10000000000000000\0D\0A...\00", align 16
@FFFFFFFFFFFFFFE = common dso_local global i32 0, align 4
@FFFFFFFFFFFFFFFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_chunk_content_length_overflow_error() #0 {
  %1 = alloca [68 x i8], align 16
  %2 = alloca [69 x i8], align 16
  %3 = alloca [70 x i8], align 16
  %4 = bitcast [68 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %4, i8* align 16 getelementptr inbounds ([68 x i8], [68 x i8]* @__const.test_chunk_content_length_overflow_error.a, i32 0, i32 0), i64 68, i1 false)
  %5 = bitcast [69 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 getelementptr inbounds ([69 x i8], [69 x i8]* @__const.test_chunk_content_length_overflow_error.b, i32 0, i32 0), i64 69, i1 false)
  %6 = bitcast [70 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %6, i8* align 16 getelementptr inbounds ([70 x i8], [70 x i8]* @__const.test_chunk_content_length_overflow_error.c, i32 0, i32 0), i64 70, i1 false)
  %7 = getelementptr inbounds [68 x i8], [68 x i8]* %1, i64 0, i64 0
  %8 = call i32 @test_content_length_overflow(i8* %7, i32 67, i32 1)
  %9 = getelementptr inbounds [69 x i8], [69 x i8]* %2, i64 0, i64 0
  %10 = call i32 @test_content_length_overflow(i8* %9, i32 68, i32 0)
  %11 = getelementptr inbounds [70 x i8], [70 x i8]* %3, i64 0, i64 0
  %12 = call i32 @test_content_length_overflow(i8* %11, i32 69, i32 0)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @test_content_length_overflow(i8*, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
